Bug 402200 - EnterSchedule dialog too narrow
Summary: EnterSchedule dialog too narrow
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-16 17:40 UTC by Glenn
Modified: 2018-12-17 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Glenn 2018-12-16 17:40:46 UTC
Opening the kmymoney "Enter Schedule" dialog, whether from the Home page or the Scheduled Transactions page, results in a window that is not wide enough to show all the contents.  The height is correct, but the width is not.  It can be resized manually after being opened, of course, but any subsequent attempt to open another "Enter Schedule" dialog results in the same too-narrow window.  The "Edit Scheduled transaction" displays correctly and other dialog boxes seem fine too.  Only the "Enter Schedule" dialog is problematic.

Note that I use xfce, though I've been using that same window manager and kmymoney for years.  I've only encountered this width issue since moving to a new HiDPI Dell XPS 13" laptop.  The OS (Fedora 28) and kmymoney/QT/etc. versions didn't change.

STEPS TO REPRODUCE
1. Run kmymoney
2. From Home screen, click "Enter schedule" icon of any scheduled transaction
3. (Alternatively, from "Scheduled transactions" page, select "Enter next transaction..." for any listed transaction

OBSERVED RESULT
Displayed "Enter Schedule" dialog is too narrow, unable to fit all items and needs to be either manually enlarged or scrolled back and forth to view all contents.

EXPECTED RESULT
The displayed "Enter Schedule" dialog should be wide enough to view all contents without scrolling or manually expanding.

Additionally, it would be nice if the displayed dialog when opened from the Home screen would be centered instead of opening at position (0,0) of desktop.  Opening the same dialog from the "Scheduled transactions" page results in a centered dialog box, and then any subsequent "Enter Schedule" attempts from the Home page then displays a properly centered dialog box.

Finally, it would also be nice if the size & position of the dialog is remembered for next time.

SOFTWARE/OS VERSIONS
Linux Version: Fedora 29
Xfce Version: 4.12
Qt Version: 5.11
Comment 1 Thomas Baumgart 2018-12-17 16:25:40 UTC
Git commit 32dc55b163df1d3e48f17a6d660db3d00153ac20 by Thomas Baumgart.
Committed on 17/12/2018 at 16:25.
Pushed by tbaumgart into branch '5.0'.

Fix display behavior of Enter Schedule Dialog

- Remember width of dialog
- Place centered on screen
- Increase default size
FIXED-IN: 5.0.3

M  +22   -1    kmymoney/dialogs/kenterscheduledlg.cpp
M  +291  -305  kmymoney/dialogs/kenterscheduledlg.ui
M  +8    -1    kmymoney/views/kscheduledview_p.h

https://commits.kde.org/kmymoney/32dc55b163df1d3e48f17a6d660db3d00153ac20
Comment 2 Thomas Baumgart 2018-12-17 16:26:33 UTC
Git commit 24f43ccc5eeed58925c091e86d241b12996dc11d by Thomas Baumgart.
Committed on 17/12/2018 at 16:08.
Pushed by tbaumgart into branch 'master'.

Fix display behavior of Enter Schedule Dialog

- Remember width of dialog
- Place centered on screen
- Increase default size
FIXED-IN: 5.0.3

M  +22   -1    kmymoney/dialogs/kenterscheduledlg.cpp
M  +291  -305  kmymoney/dialogs/kenterscheduledlg.ui
M  +8    -1    kmymoney/views/kscheduledview_p.h

https://commits.kde.org/kmymoney/24f43ccc5eeed58925c091e86d241b12996dc11d