Fix display behavior of Enter Schedule Dialog

- Remember width of dialog
- Place centered on screen
- Increase default size

BUG: 402200
FIXED-IN: 5.0.3